menu backdrop backface visibility fix

--- a/css/base.css
+++ b/css/base.css
@@ -11906,6 +11906,8 @@ input[type="checkbox"]:checked + .switch-toggle-yellow:after, input[type="radio"
 
 .menu-backdrop {
   display: none;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 .nav-drawer ~ .menu-backdrop, .touch .menu-backdrop {
   background-color: #000000;
