--- a/sass/theme/_menu.scss
+++ b/sass/theme/_menu.scss
@@ -47,6 +47,7 @@
 
 .menu-backdrop {
 	display: none;
+	@include backface(hidden);
 	.nav-drawer ~ &,
 	.touch & {
 		background-color: $black;
